style.css
/*================================ 
Global
================================*/

.vt323-regular {
  font-family: "VT323", monospace;
  font-weight: 400;
  font-style: normal;
}


.doto-uniquifier {
  font-family: "Doto", sans-serif;
  font-optical-sizing: auto;
    font-style: normal;
  font-variation-settings: "ROND" 0;
}

html, body, nav{
    font-size: 1rem;
    font-weight:900;
    font-family: "Doto", sans-serif;
}

h1 {    
    font-family: "Doto", sans-serif;
    font-size: 3rem;
    margin-bottom: 10px;
    margin-left: 5px;
    display: inline-block;
    transform-origin: left;
}

p, ul li {
    font-size: 0.9rem;
    max-width: 1200px;
    font-family: "Doto", sans-serif;
}

nav {
    font-size: 0.8rem;
    font-family: "Doto", sans-serif;
    margin-left: 5px;
}

.condensed-terminal {
    display: inline-block;   
    transform: scaleX(0.75);   
    transform-origin: left;   
    letter-spacing: -0.06em; 
}

/*================================ 
Home
================================*/



/*================================ 
Photos
================================*/


/*================================ 
Photos
================================*/

/* adaptable photo container*/
.gallery-grid {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(200, 1fr));
    gap: 5px;
    padding: 5px;
}

.gallery-grid img {
    width: 100%;  
    height: 300px;
    object-fit: cover;  
    border-radius: 2px; 
    display: block;
    margin-left: 0px;
    box-sizing: border-box;
}

/*================================ 
Projects
================================*/

